# SpeakerRecognition

./: .gitignore  README.md  dataset.py  generate_csv.py  myconfig.py  pyproject.toml  requirements.txt
src/: evaluation.py  feature_extraction.py  neural_net.py  specaug.py  tests.py
