[tool.poetry]
name = "speakerrecognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
librosa = "^0.10.0.post2"
sympy = "^1.12"
torchaudio = "^2.0.2"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

